test/fail/MissingLabelInUpdate.curry
module MissingLabelInUpdate where

import MissingLabelInUpdateExport

-- test :: R -> R
test r = r { l1 = "" }
